--- a/apps/http-proxy-specific-port.yaml
+++ b/apps/http-proxy-specific-port.yaml
@@ -1,3 +1,12 @@
+meta:
+  name: "Local HTTP Proxy demo with specific local port"
+  description: "An minimal example presenting a local HTTP proxy connecting to
+    a static website deployed on the provider's end.
+    
+  The local port for the HTTP proxy is explicitly set to 8080. The example will fail
+  if this port is not available on the proxying machine.
+  "
+  author: "GolemFactory"
 payloads:
   nginx:
     runtime: "vm"
