--- a/apps/webapp.yaml
+++ b/apps/webapp.yaml
@@ -1,3 +1,10 @@
+meta:
+  name: "Simple, db-enabled web application."
+  description: "An example showcasing a trivial web application consisting of a
+  web server and a database host deployed together on the Golem Network.
+  "
+  author: "GolemFactory"
+  version: "0.1.0"
 payloads:
   db:
     runtime: "vm"
