--- a/apps/http-proxy-specific-port.yaml
+++ b/apps/http-proxy-specific-port.yaml
@@ -1,6 +1,6 @@
 meta:
   name: "Local HTTP Proxy demo with specific local port"
-  description: "An minimal example presenting a local HTTP proxy connecting to
+  description: "A minimal example presenting a local HTTP proxy connecting to
     a static website deployed on the provider's end.
     
   The local port for the HTTP proxy is explicitly set to 8080. The example will fail
