--- a/apps/http-proxy.yaml
+++ b/apps/http-proxy.yaml
@@ -1,6 +1,6 @@
 meta:
   name: "Local HTTP Proxy demo"
-  description: "An minimal example presenting a local HTTP proxy connecting to
+  description: "A minimal example presenting a local HTTP proxy connecting to
     a static website deployed on the provider's end.
     
     The network connecting the requestor and the provider is configured implicitly.
