--- a/apps/webapp.yaml
+++ b/apps/webapp.yaml
@@ -17,16 +17,20 @@ payloads:
 nodes:
   db:
     payload: "db"
-    entrypoint:
-      - ["/bin/run_rqlite.sh"]
+    init:
+      - run:
+          args:
+            - "/bin/run_rqlite.sh"
     network: "default"
     ip:
       - "192.168.0.2"
   http:
     payload: "http"
-    entrypoint:
-      - ["/bin/bash", "-c", "cd /webapp && python app.py --db-address 192.168.0.2 --db-port 4001 initdb"]
-      - ["/bin/bash", "-c", "cd /webapp && python app.py --db-address 192.168.0.2 --db-port 4001 run > /webapp/out 2> /webapp/err &"]
+    init:
+      - run:
+          args: ["/bin/bash", "-c", "cd /webapp && python app.py --db-address 192.168.0.2 --db-port 4001 initdb"]
+      - run:
+          args: ["/bin/bash", "-c", "cd /webapp && python app.py --db-address 192.168.0.2 --db-port 4001 run > /webapp/out 2> /webapp/err &"]
     http_proxy:
       ports:
         - "5000"  # specify just the remote port, allow the local port to be automatically chosen
