--- a/apps/todo-app.yaml
+++ b/apps/todo-app.yaml
@@ -3,6 +3,7 @@ meta:
   description: "Application to store and manage your TODOs, powered by Golem Network"
   author: "GolemFactory"
   version: "0.2.0"
+  homepage: https://github.com/golemfactory/dapp-experiments/tree/main/01_todo_app
 payloads:
   db:
     runtime: "vm"
