Using example images for apps and adjusted author name to match the design

--- a/apps/external-api-request.yaml
+++ b/apps/external-api-request.yaml
@@ -9,7 +9,8 @@ meta:
   This example is *experimental* and requires providers running yagna 0.12
   with a specific certificate chain added to their keystores.
   "
-  author: "GolemFactory"
+  author: "Golem Factory"
+  image: "https://placekitten.com/350/250"
 payloads:
   external-api-request:
     runtime: "vm/manifest"
