--- a/apps/http-proxy-explicit-network.yaml
+++ b/apps/http-proxy-explicit-network.yaml
@@ -5,7 +5,8 @@ meta:
     
     Here, we choose to specify the network address explicitly.
   "
-  author: "GolemFactory"
+  author: "Golem Factory"
+  image: "https://placekitten.com/350/250"
 payloads:
   nginx:
     runtime: "vm"
