--- a/apps/http-proxy-specific-port.yaml
+++ b/apps/http-proxy-specific-port.yaml
@@ -6,7 +6,8 @@ meta:
   The local port for the HTTP proxy is explicitly set to 8080. The example will fail
   if this port is not available on the proxying machine.
   "
-  author: "GolemFactory"
+  author: "Golem Factory"
+  image: "https://placekitten.com/350/250"
 payloads:
   nginx:
     runtime: "vm"
