--- a/apps/http-proxy.yaml
+++ b/apps/http-proxy.yaml
@@ -5,7 +5,8 @@ meta:
     
     The network connecting the requestor and the provider is configured implicitly.
   "
-  author: "GolemFactory"
+  author: "Golem Factory"
+  image: "https://placekitten.com/350/250"
 payloads:
   nginx:
     runtime: "vm"
