--- a/apps/simple-service.yaml
+++ b/apps/simple-service.yaml
@@ -1,7 +1,8 @@
 meta:
   name: "A simple, non-networked service."
   description: "Minimal example of a non-networked service."
-  author: "GolemFactory"
+  author: "Golem Factory"
+  image: "https://placekitten.com/350/250"
 payloads:
   simple-service:
     runtime: "vm"
