--- a/apps/webapp.yaml
+++ b/apps/webapp.yaml
@@ -3,7 +3,8 @@ meta:
   description: "An example showcasing a trivial web application consisting of a
   web server and a database host deployed together on the Golem Network.
   "
-  author: "GolemFactory"
+  author: "Golem Factory"
+  image: "https://placekitten.com/350/250"
   version: "0.1.0"
 payloads:
   db:
